--- a/bikcraft/index.html
+++ b/bikcraft/index.html
@@ -6,9 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
     <link rel="stylesheet" href="_css/style.css">
-    <title>Bikcraft - Biciletas Elétricas</title>
+    <title>Bikcraft - Bicicletas Elétricas</title>
 </head>
 <body>
-    
+    <header class="header-bg">
+        <div class="header">
+            <a href="./">
+                <img src="img/bikcraft.svg" alt="Bikcraft">
+            </a>
+            
+            <nav aria-label="primaria">
+                <ul class="header-menu">
+                    <li><a href="img/bicicletas.html">Bicicletas</a></li>
+                    <li><a href="img/seguro.html">Seguros</a></li>
+                    <li><a href="img/contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+
+    </header>
 </body>
 </html>
